changes since 2.9.12:
	- pdns_recursor can now survive being disconnected from the net for long
	  enough to expire the entire root
	- pdns_recursor now also jumbles answers (it did that already, I
	  just didn't know it)
	- big LDAP cleanup	
	- LDAP now has TLS support
	- Opteron support (opteron login by jeffdavey@submersion.com)
	- fixed errors with disable-axfr (Norbert)
	- improved error reporting in zone2sql (Thom May)
	- Zone2LDAP updates:
		Now it's possible to generate ldif files containing a tree or a list of entries.

- (Windows) Ported 2.9.13 codebase to Windows.
- (Windows) Added the Generic SQLite backend.
- (Windows) Made the Generic ODBC backend conform to the SSql standard
again.
- (Windows) Removed the old ODBC backend.  
- (Windows) The recursor was ported from scratch and now works as an NT
service.
- (Windows) Renamed the service to "PowerDNS" (recursor is called "PowerDNS
Recursor").
- (Windows) Rewrote the installer from scratch and upgraded to NSIS 2 
(nsis.sf.net)
- (Windows) Some other fixes and improvements.



changes since 2.9.11:
	- ldap updates
		no longer sends entire reverse zone with AXFR
	- SRV fixes for zonefiles (Christof Meerwald)
	- gpgsql no longer reports as gmysql (Sherwin Daganoto)
	- we now understand 0.0.0.0/0
	- report more exactly what we bind to (don't trust gethostbyname)
	- removed only-soa hackery (noticed by Norbert Sendetzky)
	- added --version
	- clean up some parameter descriptions
	- cleanups by Norbert (getAuth moved to chopOff, arguments 'contains' massive cleanup)
	- improved reporting to which addresses we bind (now always mentions
	  IP addresses)
	- added delegation-only feature (thanks to ISC)
	- some Debian fixes
	- pdns_recursor does not try to resolve its own IP addresses anymore
	- pdns_recursor has gained an init.d script
	- sqlite support from 
	- bindbackend2 gains supermaster support (Mark Bergsma), untested
	- slave communicator more robust against misconfiguration (empty
	  master field)	