@@ -51,6 +51,8 @@ PacketHandler::PacketHandler():B(s_programname)
   d_doRecursion= arg().mustDo("recursor");
   d_logDNSDetails= arg().mustDo("log-dns-details");
   d_doIPv6AdditionalProcessing = arg().mustDo("do-ipv6-additional-processing");
+  d_corrupt = S.getPointer( "corrupt-packets" );
+  d_servfail = S.getPointer( "servfail-packets" );
 }
 
 DNSBackend *PacketHandler::getBackend()
@@ -154,7 +156,7 @@ int PacketHandler::doDNSCheckRequest(DNSPacket *p, DNSPacket *r, string &target)
   DNSResourceRecord rr;
 
   if (p->qclass == 3 && p->qtype.getName() == "HINFO") {
-    rr.content = "PowerDNS $Id: packethandler.cc,v 1.19 2003/11/23 15:14:57 ahu Exp $";
+    rr.content = "PowerDNS $Id: packethandler.cc,v 1.20 2003/12/22 11:53:41 ahu Exp $";
     rr.ttl = 5;
     rr.qname=target;
     rr.qtype=13; // hinfo
@@ -170,7 +172,7 @@ int PacketHandler::doVersionRequest(DNSPacket *p, DNSPacket *r, string &target)
 {
   DNSResourceRecord rr;
   if(p->qtype.getCode()==QType::TXT && target=="version.bind") {// TXT
-    rr.content="Served by POWERDNS "VERSION" $Id: packethandler.cc,v 1.19 2003/11/23 15:14:57 ahu Exp $";
+    rr.content="Served by POWERDNS "VERSION" $Id: packethandler.cc,v 1.20 2003/12/22 11:53:41 ahu Exp $";
     rr.ttl=5;
     rr.qname=target;
     rr.qtype=QType::TXT; // TXT
@@ -497,7 +499,7 @@ DNSPacket *PacketHandler::question(DNSPacket *p)
 #ifndef WIN32
     if(p->d.qr) { // QR bit from dns packet (thanks RA from N)
       L<<Logger::Error<<"Received an answer (non-query) packet from "<<p->getRemote()<<", dropping"<<endl;
-      S.inc("corrupt-packets");
+      (*d_corrupt)++;
       return 0;
     }
 #endif // WIN32
@@ -506,7 +508,7 @@ DNSPacket *PacketHandler::question(DNSPacket *p)
 
     if(!p->qdomain.empty() && (p->qdomain[0]=='%' || p->qdomain.find('|')!=string::npos) ) {
       L<<Logger::Error<<"Received a malformed qdomain from "<<p->getRemote()<<", '"<<p->qdomain<<"': dropping"<<endl;
-      S.inc("corrupt-packets");
+      (*d_corrupt)++;
       return 0;
     }
     if(p->d.opcode) { // non-zero opcode (again thanks RA!)
@@ -770,8 +772,8 @@ DNSPacket *PacketHandler::question(DNSPacket *p)
   catch(DBException &e) {
     L<<Logger::Error<<"Database module reported condition which prevented lookup - sending out servfail"<<endl;
     r->setRcode(RCode::ServFail);
-    S.inc("servfail-packets");
     S.ringAccount("servfail-queries",p->qdomain);
+    (*d_servfail)++;
   }
   return r; 
 
